--- a/src/styles/pageStyles/Login.css
+++ b/src/styles/pageStyles/Login.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #14213d;
+  background-color: #1A3D6C;
 }
 
 .login_form {
@@ -23,7 +23,7 @@
 .form_group input {
   padding: 0.21rem;
   border: none;
-  background-color: #14213d;
+  background-color: #1A3D6C;
   color: wheat;
   border-bottom: 2px solid #FCA311;
   font-size: 1.1rem;
@@ -41,7 +41,7 @@
   align-items: center;
   justify-content: center;
   font-size: 1.1rem;
-  color: #14213d;
+  color: #1A3D6C;
   background-color: #FCA311;
 }
 
